tests/bad/value_enums/no_compare_with_values.oc
/// fail: Operator `Equals` does not support non-trivial enum `Foo`

enum Foo {
    Case0(i32)
    Case1(str, i32)
    Case2(str)
    Case3
}


def main() {
    let x: Foo
    let y: Foo
    if x == y {
        println("x == y")
    } else {
        println("x != y")
    }
}